--- a/app/views/application/_navbar.html.erb
+++ b/app/views/application/_navbar.html.erb
@@ -16,6 +16,9 @@
   			<% if user_signed_in? %>
           <li><%= link_to  "", dashboard_path, class: "home" %></li>
           <%= render 'application/nav/profile' %>
+          <%= render 'application/nav/my_trips' %>
+          <li><%= link_to current_user.name, profile_url(current_user), class: "name" %>  </li>
+          <li class="link"><%= link_to gravatar(current_user, 32, "img-rounded"), profile_url(current_user) %>  </li>
   			<% else %>
           <li><%= link_to  "", root_path, class: "home" %></li>
           <%= render 'popup_signin' %>
