--- a/app/views/trips/edit.html.erb
+++ b/app/views/trips/edit.html.erb
@@ -1,3 +1,11 @@
-<%= render 'form_edit' %>
+<div id="trip_edit" class="">
+	<div class="col-md-8">
+		<div class="panel panel-default">
+			<%= render partial: 'trips/show_edit/head', locals: {user: @trip.driver} %>
+			<%= error_messages_for(@trip) %>
+			<%= render 'trips/show_edit/trip_summary' %>
+			<%= render 'trips/show_edit/form_edit' %>
+		</div>
+	</div>
+</div>
 
-<%= link_to 'Show', @trip %> | <%= link_to "Delete", trip_path(@trip), method: :delete %>
