--- a/app/views/shared/_seats_order.html.erb
+++ b/app/views/shared/_seats_order.html.erb
@@ -10,10 +10,9 @@
 		<% else %>
 			<!-- -- -->
 			<% user = User.find_by(id: id) %>
-			<% booking = user.bookings.where(subtrip_id: subtrip.id).last %>
-  		<!-- -- -->
+	  	<!-- -- -->
   		<%= link_to gravatar(user, 43, "img-circle person passenger-#{index+1}"), profile_url(user) %> 
-  		<% if booking && booking.acceptance_status == 0 %> <!--  -->
+  		<% if subtrip.is_waiting_for?(user.id) %> 
   			<%= image_tag( IMAGES_PATH+"blueprints/waiting_#{params[:locale]}.gif", size: "43x43", class: "waiting img-circle person passenger-#{index+1}" ) %>
   		<% end %>
 		<% end %>
