--- a/app/views/users/new/_form.html.erb
+++ b/app/views/users/new/_form.html.erb
@@ -1,17 +1,17 @@
 <%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :method => :POST, html: {class: "form-sign-in-up"}, defaults: { input_html: { class: 'form-control' } } ) do |f| %>
 
- 	<h2 class="form-sign-in-up-heading">Sign up form</h2>
+ 	<h2 class="form-sign-in-up-heading"><%= t('.title') %></h2>
 
  	<%#= devise_error_messages! %>
 
-  <%= f.input :email, :autofocus => true, :required => true, placeholder: "Email address", input_html: { class: "form-control " }, label: false  ,error_html: {class: "" } %>
+  <%= f.input :email, :autofocus => true, :required => true, placeholder: t("email"), input_html: { class: "form-control " }, label: false  ,error_html: {class: "" } %>
 
-  <%= f.input :password, placeholder: "Password", input_html: { class: "form-control " }, label: false   %>
+  <%= f.input :password, placeholder: t("password"), input_html: { class: "form-control " }, label: false   %>
 
-  <%= f.input :password_confirmation, placeholder: "Password Confirmation", input_html: { class: "form-control " }, label: false   %>
+  <%= f.input :password_confirmation, placeholder: t('.password_confirmation'), input_html: { class: "form-control " }, label: false   %>
 		
-	<%= f.input :gender, collection: [['Male','m'],['Female','f']], prompt: "Select Gender", label: false %>
+	<%= f.input :gender, collection: [[t('gender.male'),'m'],[t('gender.female'),'f']], prompt: t('.select_gender'), label: false %>
 
-  <%= f.button :submit, "Sign up", class: "btn btn-lg btn-warning btn-block " %>
-    <%= link_to "Sign in", new_session_path(resource_name), class: "btn btn-link" %>
+  <%= f.button :submit, t('.sign_up'), class: "btn btn-lg btn-warning btn-block " %>
+    <%= link_to t('.sign_in'), new_session_path(resource_name), class: "btn btn-link" %>
 <% end %>
