--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -1,10 +1,12 @@
-<div class="col-md-4">
-	<%= render partial: 'shared/users_list', locals: {users: @followed_users, title: t('.followed_users')} %>
-	<%= render partial: 'shared/users_list', locals: {users: @random_users, title: t('.other_users') } %>
-</div>
+<div id="dashboard">
+	<div class="col-md-4">
+		<%= render partial: 'shared/users_list', locals: {users: @followed_users, title: t('.followed_users')} %>
+		<%= render partial: 'shared/users_list', locals: {users: @random_users, title: t('.other_users') } %>
+	</div>
 
-<div class="col-md-8">
-	<%= render 'shouts/form' %>
+	<div class="col-md-8">
+		<%= render 'shouts/form' %>
 
-	<%= render partial: 'shared/posts_panel', locals: {objs:@dashboard.timeline} %>
+		<%= render partial: 'shared/posts_panel', locals: {objs:@dashboard.timeline} %>
+	</div>
 </div>
