--- a/app/views/shared/_posts_panel.html.erb
+++ b/app/views/shared/_posts_panel.html.erb
@@ -1,8 +1,8 @@
-<div class="users-list panel panel-default">
+<div class="post_panel panel panel-default ">
   <div class="panel-heading">
 		<%= t 'posts' %>
   </div>
-  <div class="panel-body">
+  <div class="panel-body ">
   	<% if objs.any? %>
 			<%= render objs %>	  		
   	<% else %>
