--- a/app/views/shouts/_shout.html.erb
+++ b/app/views/shouts/_shout.html.erb
@@ -12,7 +12,7 @@
 					<%# if can? :destroy, shout.content %>
 					<% if shout.user == current_user %>
 						<span class="remove">
-							<%= link_to "remove", shout.content, method: :delete, class: "pull-left", data: {confirm: "Are you sure you want to delete this shout?"} %>
+							<%= link_to t("remove"), shout.content, method: :delete, class: "pull-left", data: {confirm: t('delete_confirmation')} %>
 						</span>
 					<% end %>
 				</span>	
