--- a/app/views/homes/_spacial_events.html.erb
+++ b/app/views/homes/_spacial_events.html.erb
@@ -1,18 +1,18 @@
 <div class="frame">
 	<div class="title">
 		<h4>
-			<strong class="lead"> سفرهای به مقصد کرمان </strong> 
+			<strong class="lead"> سفرهای ویژه </strong> 
 		</h4>
 	</div>
 
 	<div class="inner">
-		<a href="<%= special_events_search_subtrips_path %>">
-			<%= image_tag( "https://s3-eu-west-1.amazonaws.com/hamsafaryab.production/special_events/tractor/tiaxtor.jpg", class: "img-responsive") %>
-		</a>
+  <!-- <a href="<%= special_events_search_subtrips_path %>"> -->
+			<%#= image_tag( "https://s3-eu-west-1.amazonaws.com/hamsafaryab.production/special_events/tractor/tiaxtor.jpg", class: "img-responsive") %>
+	<!-- 	</a> -->
 
 		<div class="row">
 		  <div class="col-sm-12">
-				<%= link_to 'همه سفرها به کرمان', special_events_search_subtrips_path, class: "btn btn-warning btn-lg btn-block" %>
+				<%= link_to ' همه سفرها به کرمان، مخصوس هواداران تراکتورسازی تبریز', special_events_search_subtrips_path, class: "btn btn-warning btn-lg btn-block" %>
 			</div>				
 		</div>	
 
