--- a/app/assets/stylesheets/homes.css.scss
+++ b/app/assets/stylesheets/homes.css.scss
@@ -44,6 +44,7 @@ $green: #b5c023;
     border: 2px solid #C3D329;
     border-radius: 6px;
     padding: 0px 15px 15px 15px;
+    margin-bottom: 15px;
     .title{
 			color: #FFFFFF;
 			padding-right: 15px;
