--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -3,10 +3,10 @@
 <% end %>
 
 <div id="siteHeader" class="hidden-xs"  style="<%= side %> background-image:url('<%= "#{IMAGES_PATH}headerBG-#{lang_direction}.gif" %>');">
-
 	<div id="siteLogo" style="background-image:url('<%= "#{IMAGES_PATH}logo-#{lang_direction}.gif" %>');">
 		<a href="<%= root_path %>"  > 
 			<h1 id="logo"><strong> <%= t('hamsafaryab') %></strong></h1>
+			<%= image_tag("#{IMAGES_PATH}logo-#{lang_direction}.gif" , class: "invisible") %>	
 			<h2 id="slogan"><strong> <%= t('slogan') %></strong></h2>
 		</a>
 	</div>
