--- a/app/views/trips/show_edit/_subtrip_fields_show.html.erb
+++ b/app/views/trips/show_edit/_subtrip_fields_show.html.erb
@@ -1,3 +1,4 @@
+<a href="<%= subtrip_path(f.object.id) %>">
 <fieldset>
   <span class="col-sm-3">  
     <%#= am_pm f.object.date_time %>
@@ -10,3 +11,4 @@
   <%#= f.hidden_field :_destroy %>
   <%#= link_to t('remove') , "#", class: "remove_fields col-sm-1 pull-left" %>  
 </fieldset>
+</a>
