--- a/app/views/shouts/_shout.html.erb
+++ b/app/views/shouts/_shout.html.erb
@@ -4,13 +4,11 @@
 			<%= link_to gravatar(shout.user), profile_url(shout.user) %>
 			<%= link_to shout.user.name, profile_url(shout.user) %>
 			<div class="content">
-				<p>
-					<%= render shout.content %>
-				</p>
+				<%= render shout.content %>
 				<span class="meta">
-					<%= time_ago_in_words(shout.created_at) %> <%=t("ago")  %>
+					<span class="text-muted"><%= time_ago_in_words(shout.created_at) %> <%=t("ago")  %></span>
 					<%# if can? :destroy, shout.content %>
-					<% if shout.user == current_user %>
+					<% if (shout.user == current_user && (shout.content_type != 'Trip')) %>
 						<span class="remove">
 							<%= link_to t("remove"), shout.content, method: :delete, class: "pull-left", data: {confirm: t('delete_confirmation')} %>
 						</span>
