add available seats column and detail field to trip in timeline

--- a/app/views/subtrips/_subtrip_search_raw.html.erb
+++ b/app/views/subtrips/_subtrip_search_raw.html.erb
@@ -49,7 +49,7 @@
 			</div>
 
 			<div class="avalability">
-				<strong><%= subtrip.seats.count(0) %> </strong>
+				<strong><%= subtrip.free_seats %> </strong>
 				<span><%= t('seats_left') %> <%= t('.from') %> <%= subtrip.seats.size %></span>
 
 			</div>
