--- a/app/views/subtrips/show/_seats_status.html.erb
+++ b/app/views/subtrips/show/_seats_status.html.erb
@@ -11,7 +11,7 @@
 			  		</tr>
 			  		<tr>
 			  			<th><%= t '.number_of_free_seats' %> </th>
-			  			<th><%= @subtrip.seats.count(0) %>	</th>  			
+			  			<th><%= @subtrip.free_seats %>	</th>  			
 			  		</tr>
 			  		<tr>
 			  			<th><%= t '.number_of_taken_seats' %> </th>
