--- a/app/views/user_mailer/signup_confirmation.html.erb
+++ b/app/views/user_mailer/signup_confirmation.html.erb
@@ -7,6 +7,6 @@ Now you can see your profile in this link below
 <a href="<%= url_for(controller: 'users',
 						 action:'show', 
 						 id: @user.id,
-						 locale: 'fa',
+						 locale: locale,
 						 host: 'localhost:3000') %>">sdfg</a>
 <p>HamsafarYab's team</p>
