--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,5 +1,5 @@
 <div id="bookings_index">
-  <div class="panel panel-default">
+  <div class="panel panel-success">
     <div class="panel-heading"><h4><%= t ".title" %></h4></div>
     <div class="panel-body">
       <%= t ".line1" %>
