--- a/app/views/invitations/show.html.erb
+++ b/app/views/invitations/show.html.erb
@@ -23,3 +23,13 @@
 	</div>
 </div>
 
+<h4><%= t ".list_of_invited_users" %></h4>
+<div class="panel panel-default">
+	<div class="panel-body">
+		<ol>
+			<% current_user.invited_users.each do |u| %>
+				<li><%= link_to u.name, profile_url(u) %></li>		
+			<% end %>
+		</ol>
+	</div>
+</div>
