--- a/app/views/application/nav/_my_network.html.erb
+++ b/app/views/application/nav/_my_network.html.erb
@@ -4,5 +4,8 @@
 	</a>
 	<ul class="dropdown-menu">
 		<li><%= link_to t('.invitation_sending'), invitation_path %></li>
+		<li><%= link_to t('.my_network'), network_path(current_user.slug) %></li>
+
+		
 	</ul>
 </li>
