clean up first page and remove spacial events from navbar

--- a/app/views/application/_head.html.erb
+++ b/app/views/application/_head.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fa">
 <head>
   <title><%=t 'site_info.title' %><%= " | #{@page_title}" if @page_title %></title>
 
@@ -8,7 +8,6 @@
 
   <meta name="keywords"   content="بلیط اتوبوس, خرید اینترنتی بلیط ,همسفر ,مسافرت ,بلیط ,رزرو اینترنتی بلیط , dp2dxhgz2DSL0XBruyi43dku3so" />
 
-  <meta name="LANGUAGE" content="fa" />
   <meta name="description" content="تسهیل در یافتن همسفر در مسافرت های بین شهری">
 
   <%= favicon_link_tag IMAGES_PATH + "ico/favicon.gif" %>
