--- a/app/views/homes/show.html.erb
+++ b/app/views/homes/show.html.erb
@@ -2,20 +2,21 @@
 	<div class="col-md-6">
 		<div id="search_form" >
 			<% unless (request.try(:location).try(:country_code) == 'IR')  %>
-				<%#= image_tag(IMAGES_PATH+"passenger.png", class: "passenger")	%>
+				<%= image_tag(IMAGES_PATH+"passenger.png", class: "passenger")	%>
 			<% end %>
 			<%= render partial: 'trip_search' %>	
 	  </div>
 	  <br>
-		<div id="insert_trip" >
-				<%= image_tag(IMAGES_PATH+"passenger_man.png", class: "passenger passenger_man")	%>
-			<%= render 'trip_insert' %>	
+
+	  <div id="spacial_events">
+			<%= render 'spacial_events'%>	
 		</div>
 	</div>	
 
 	<div class="col-md-6">
-		<div id="spacial_events">
-			<%= render 'spacial_events'%>	
+		<div id="insert_trip" >
+				<%= image_tag(IMAGES_PATH+"passenger_man.png", class: "passenger passenger_man")	%>
+			<%= render 'trip_insert' %>	
 		</div>
 		<div id="sample_trips">
   		<% if @subtrips && @subtrips.any? %>
