--- a/app/views/subtrips/_subtrip_search_raw.html.erb
+++ b/app/views/subtrips/_subtrip_search_raw.html.erb
@@ -42,7 +42,7 @@
 		<div class="offer col-xs-3">
 			<div class="price">
 				<strong>
-				<%#= number_to_currency(1234567,  separator: "٬", format: "%n") %> <br>
+				<%#= number_to_currency(1234567,  separator: "٬", format: "%n") %> 
 					<%= t 'currency', amount: currency(subtrip.price) %>
 				</strong>
 				<span class="price-unit"><%= t('per_passenger') %></span>
