improve css of dashboard and profile and search subtrips form for english language

--- a/app/assets/stylesheets/search_subtrips.css.scss
+++ b/app/assets/stylesheets/search_subtrips.css.scss
@@ -108,11 +108,11 @@ $btn-primary-darker:  darken($btn-primary-color, 8%);
 }
 
 .autocomplete_mode{
-  right: 234px;
+  // right: 234px;
   top: 3px; 		
 }
 .select_mode{
-  right: 234px;
+  // right: 234px;
   top: -4px;	
 }
 
